fixed additional issue in bg not showing up in live page

--- a/styles/games.css
+++ b/styles/games.css
@@ -12,13 +12,6 @@ main::after {
     top: 0;
     left: 0;
     content: "";
-    background-image: linear-gradient(
-            180deg,
-            rgba(33, 35, 39, 1) 0%,
-            rgba(16, 34, 54, 0.5)50%,
-            rgba(10, 21, 34, 0.25) 100%
-        ),
-        url("../images/csgo.jpg");
     background-size: cover;
     background-position: center;
     height: calc(100% + 8rem);
